--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     <br>, voluptas odio a dolorum reiciendis architecto?
                 </p>
-                <div class="cta">
+                <div class="cta" onclick="alteraCor()">
                     <button>Comece Agora</button>
                 </div>
             </div>
